# automltsad

./: .gitignore  LICENSE  README.md  pyproject.toml
automltsad/automl/metaod/: __init__.py  core.py  predict_metaod.py  train_metaod.py  utility.py
automltsad/dataset/: __init__.py  dataset.py
automltsad/detector/: __init__.py  base.py  detectors.py
automltsad/detectors/: __init__.py  base.py  callbacks.py  deeplearning.py  detectors.py  utils.py
automltsad/detectors/GTA/: LICENSE  attn.py  decoder.py  embed.py  encoder.py  gta.py  masking.py  model.py  tconv.py
automltsad/evaluation/: __init__.py  evaluation.py
automltsad/metrics/: __init__.py  metrics.py
automltsad/model/: __init__.py  model.py
automltsad/transform/: __init__.py  base.py  transform.py
automltsad/utils/: __init__.py  autoperiod.py  utils.py
automltsad/validation/: __init__.py  validator.py
examples/: dataset_exploration.ipynb  example.ipynb  gdn_det.ipynb  gta_det.ipynb  lstm_ae_det.ipynb  optuna.ipynb  pipeline_design.ipynb  run.ipynb  test.ipynb  test.txt  train.txt  tranad_det.ipynb  vae_det.ipynb
examples/data/: test.txt  train.txt
experiments/: 00_dataset_exploration.ipynb  01_window_size_importance.ipynb  02_tsfresh_features.ipynb  03_ucr_results_exploration.ipynb  04_nab_results_exploration.ipynb  README.md  config.py  datasets_ae.py  datasets_vae.py  exp_baseline.py  exp_eus.py  exp_eusae.py  exp_eusvae.py  exp_meta.py  latex_figures.py  main_autoencoding.py  main_baseline.py  main_meta.py  main_unsupervised.py  main_unsupervised_ae.py  main_unsupervised_aev2.py  main_unsupervised_vae.py  main_vae.py  pipeline_design.md  utils.py
experiments/config/: baseline.yaml  meta.yaml  unsupervised_vae.yaml  unsupervised_vaev2.yaml
experiments/data/: numenta_period.txt  period.txt  test.txt
experiments/data/ae/: 008_UCR_Anomaly_DISTORTEDCIMIS44AirTemperature4_4000_5549_5597.txt-.ckpt  013_UCR_Anomaly_DISTORTEDECG3_15000_16000_16100.txt-.ckpt  014_UCR_Anomaly_DISTORTEDECG3_8000_17000_17100.txt-.ckpt  016_UCR_Anomaly_DISTORTEDECG4_5000_16900_17100.txt-.ckpt  017_UCR_Anomaly_DISTORTEDECG4_5000_17000_17100.txt-.ckpt  112_UCR_Anomaly_BIDMC1_2500_5400_5600.txt-.ckpt  (+45 more)
experiments/numenta_benchmarks/: config.py  datasets_vae.py  exp_baseline.py  exp_eus.py  exp_eusvae.py  exp_meta.py  main_autoencoding.py  main_meta.py  main_unsupervised.py  main_unsupervised_aev2.py  utils.py
experiments/results/: baseline_results.csv  best_models_0.joblib  best_models_1.joblib  best_models_2.joblib  best_models_3.joblib  best_models_4.joblib  best_models_tsfresh.joblib  numenta_baseline_results.csv  numenta_best_models.joblib  numenta_best_models_tsfresh.joblib  window_size_experiment_autoperiod.npy  window_size_experiment_results.npz
(+6940 files in other folders)
