[tool.poetry]
name = "automltsad"
version = "0.1.0"
description = ""
authors = ["NevoleMarek <nevole.marek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.7"
numpy = "^1.23.5"
scikit-learn = "^1.2.0"
PyWavelets = "^1.4.1"
tslearn = "^0.5.2"
pyod = "^1.0.7"
optuna = "^3.0.5"
lightgbm = "^3.3.4"
statsmodels = "^0.13.5"
torch = "^1.13.1"
torchvision = "^0.14.1"
dgl = "^1.0.0"
dglgo = "^0.0.2"
astropy = "^5.2.1"


[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.2"
matplotlib = "^3.6.2"
jupyter = "^1.0.0"
plotly = "^5.11.0"
tqdm = "^4.64.1"
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
skip-string-normalization = true
