[tool.poetry]
name = "automltsad"
version = "0.1.0"
description = ""
authors = ["NevoleMarek <nevole.marek@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.7"
numpy = "1.22.4"
scikit-learn = "^1.2.0"
PyWavelets = "^1.4.1"
tslearn = "^0.5.2"
pyod = "^1.0.7"
optuna = "^3.0.5"
lightgbm = "^3.3.4"
statsmodels = "^0.13.5"
torch = "^1.13.1"
torchvision = "^0.14.1"
dgl = "^1.0.0"
dglgo = "^0.0.2"
astropy = "^5.2.1"
pytorch-lightning = "^1.9.1"
rich = "^13.3.1"
pyg-lib = { url = "https://data.pyg.org/whl/torch-1.13.0%2Bcu117/pyg_lib-0.1.0%2Bpt113cu117-cp310-cp310-linux_x86_64.whl"}
torch-scatter = { url = "https://data.pyg.org/whl/torch-1.13.0%2Bcu117/torch_scatter-2.1.0%2Bpt113cu117-cp310-cp310-linux_x86_64.whl" }
torch-sparse = { url = "https://data.pyg.org/whl/torch-1.13.0%2Bcu117/torch_sparse-0.6.16%2Bpt113cu117-cp310-cp310-linux_x86_64.whl" }
torch-geometric = "^2.2.0"

[tool.poetry.group.dev.dependencies]
black = "^22.12.0"
isort = "^5.11.2"
matplotlib = "^3.6.2"
jupyter = "^1.0.0"
plotly = "^5.11.0"
tqdm = "^4.64.1"
pandas = "^1.5.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
skip-string-normalization = true
